# cobol-mobile

./: .gitignore  COPYING.SCRIPTS  Package.swift  README.md
.github/workflows/: build.yml
android/: build-all.sh  build-gmp.sh  build-gnucobol.sh  build-libdb.sh  ndk_env.sh  package.sh
android/GnuCOBOL/: settings.gradle.kts
android/GnuCOBOL/gnucobol-android/: build.gradle.kts
android/GnuCOBOL/gnucobol-android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/GnuCOBOL/gradle/: libs.versions.toml
android/GnuCOBOL/gradle/wrapper/: gradle-wrapper.properties
android/package/: AndroidManifest.xml  publish.pom
android/package/prefab/: prefab.json
ca/rmen/gnucobol-kmp/: maven-metadata-local.xml
ca/rmen/gnucobol-kmp-android/: maven-metadata-local.xml
ca/rmen/gnucobol-kmp-android/0.0.4/: gnucobol-kmp-android-0.0.4-sources.jar.asc  gnucobol-kmp-android-0.0.4-sources.jar.md5  gnucobol-kmp-android-0.0.4-sources.jar.sha1  gnucobol-kmp-android-0.0.4-sources.jar.sha256  gnucobol-kmp-android-0.0.4-sources.jar.sha512  gnucobol-kmp-android-0.0.4.aar  gnucobol-kmp-android-0.0.4.aar.asc  gnucobol-kmp-android-0.0.4.aar.md5  gnucobol-kmp-android-0.0.4.aar.sha1  gnucobol-kmp-android-0.0.4.aar.sha256  gnucobol-kmp-android-0.0.4.aar.sha512  gnucobol-kmp-android-0.0.4.module  gnucobol-kmp-android-0.0.4.module.asc  gnucobol-kmp-android-0.0.4.module.md5  gnucobol-kmp-android-0.0.4.module.sha1  gnucobol-kmp-android-0.0.4.module.sha256  gnucobol-kmp-android-0.0.4.module.sha512  gnucobol-kmp-android-0.0.4.pom  gnucobol-kmp-android-0.0.4.pom.asc  gnucobol-kmp-android-0.0.4.pom.md5  gnucobol-kmp-android-0.0.4.pom.sha1  gnucobol-kmp-android-0.0.4.pom.sha256  gnucobol-kmp-android-0.0.4.pom.sha512
ca/rmen/gnucobol-kmp-android/0.0.5/: gnucobol-kmp-android-0.0.5-javadoc.jar.asc  gnucobol-kmp-android-0.0.5-sources.jar.asc  gnucobol-kmp-android-0.0.5-sources.jar.md5  gnucobol-kmp-android-0.0.5-sources.jar.sha1  gnucobol-kmp-android-0.0.5-sources.jar.sha256  gnucobol-kmp-android-0.0.5-sources.jar.sha512  gnucobol-kmp-android-0.0.5.aar  gnucobol-kmp-android-0.0.5.aar.asc  gnucobol-kmp-android-0.0.5.aar.md5  gnucobol-kmp-android-0.0.5.aar.sha1  gnucobol-kmp-android-0.0.5.aar.sha256  gnucobol-kmp-android-0.0.5.aar.sha512  gnucobol-kmp-android-0.0.5.module  gnucobol-kmp-android-0.0.5.module.asc  gnucobol-kmp-android-0.0.5.module.md5  gnucobol-kmp-android-0.0.5.module.sha1  gnucobol-kmp-android-0.0.5.module.sha256  gnucobol-kmp-android-0.0.5.module.sha512  gnucobol-kmp-android-0.0.5.pom  gnucobol-kmp-android-0.0.5.pom.asc  gnucobol-kmp-android-0.0.5.pom.md5  gnucobol-kmp-android-0.0.5.pom.sha1  gnucobol-kmp-android-0.0.5.pom.sha256  gnucobol-kmp-android-0.0.5.pom.sha512
ca/rmen/gnucobol-kmp-iosarm64/: maven-metadata-local.xml
ca/rmen/gnucobol-kmp-iosarm64/0.0.4/: gnucobol-kmp-iosarm64-0.0.4-cinterop-gnuCobol.klib.asc  gnucobol-kmp-iosarm64-0.0.4-cinterop-gnuCobol.klib.md5  gnucobol-kmp-iosarm64-0.0.4-cinterop-gnuCobol.klib.sha256  gnucobol-kmp-iosarm64-0.0.4-cinterop-gnuCobol.klib.sha512  gnucobol-kmp-iosarm64-0.0.4-cinterop-swiftPMImport.klib  gnucobol-kmp-iosarm64-0.0.4-cinterop-swiftPMImport.klib.asc  gnucobol-kmp-iosarm64-0.0.4-cinterop-swiftPMImport.klib.md5  gnucobol-kmp-iosarm64-0.0.4-cinterop-swiftPMImport.klib.sha1  gnucobol-kmp-iosarm64-0.0.4-cinterop-swiftPMImport.klib.sha256  gnucobol-kmp-iosarm64-0.0.4-cinterop-swiftPMImport.klib.sha512  gnucobol-kmp-iosarm64-0.0.4-javadoc.jar.asc  gnucobol-kmp-iosarm64-0.0.4-javadoc.jar.sha512  gnucobol-kmp-iosarm64-0.0.4-metadata.jar.asc  gnucobol-kmp-iosarm64-0.0.4-metadata.jar.sha1  gnucobol-kmp-iosarm64-0.0.4-metadata.jar.sha256  gnucobol-kmp-iosarm64-0.0.4-metadata.jar.sha512  gnucobol-kmp-iosarm64-0.0.4-sources.jar.asc  gnucobol-kmp-iosarm64-0.0.4-sources.jar.sha1  gnucobol-kmp-iosarm64-0.0.4-sources.jar.sha512  gnucobol-kmp-iosarm64-0.0.4.klib  gnucobol-kmp-iosarm64-0.0.4.klib.asc  gnucobol-kmp-iosarm64-0.0.4.klib.md5  gnucobol-kmp-iosarm64-0.0.4.klib.sha1  gnucobol-kmp-iosarm64-0.0.4.klib.sha256  gnucobol-kmp-iosarm64-0.0.4.klib.sha512  gnucobol-kmp-iosarm64-0.0.4.module  gnucobol-kmp-iosarm64-0.0.4.module.asc  gnucobol-kmp-iosarm64-0.0.4.module.md5  gnucobol-kmp-iosarm64-0.0.4.module.sha1  gnucobol-kmp-iosarm64-0.0.4.module.sha256  gnucobol-kmp-iosarm64-0.0.4.module.sha512  gnucobol-kmp-iosarm64-0.0.4.pom  gnucobol-kmp-iosarm64-0.0.4.pom.asc  gnucobol-kmp-iosarm64-0.0.4.pom.md5  gnucobol-kmp-iosarm64-0.0.4.pom.sha1  gnucobol-kmp-iosarm64-0.0.4.pom.sha256  gnucobol-kmp-iosarm64-0.0.4.pom.sha512
ca/rmen/gnucobol-kmp-iosarm64/0.0.5/: gnucobol-kmp-iosarm64-0.0.5-cinterop-gnuCobol.klib  gnucobol-kmp-iosarm64-0.0.5-cinterop-gnuCobol.klib.asc  gnucobol-kmp-iosarm64-0.0.5-cinterop-gnuCobol.klib.sha1  gnucobol-kmp-iosarm64-0.0.5-cinterop-swiftPMImport.klib  gnucobol-kmp-iosarm64-0.0.5-cinterop-swiftPMImport.klib.asc  gnucobol-kmp-iosarm64-0.0.5-cinterop-swiftPMImport.klib.md5  gnucobol-kmp-iosarm64-0.0.5-cinterop-swiftPMImport.klib.sha1  gnucobol-kmp-iosarm64-0.0.5-cinterop-swiftPMImport.klib.sha256  gnucobol-kmp-iosarm64-0.0.5-cinterop-swiftPMImport.klib.sha512  gnucobol-kmp-iosarm64-0.0.5-javadoc.jar.asc  gnucobol-kmp-iosarm64-0.0.5-metadata.jar.asc  (+26 more)
ca/rmen/gnucobol-kmp-iossimulatorarm64/: maven-metadata-local.xml
examples/android/coboldemo/: README.md  settings.gradle.kts
examples/android/coboldemo/app/src/main/cpp/: AndroidBridge.c  AnswerToLifeJni.c  AnswerToLifeJni.cpp  CMakeLists.txt  JNIBridge.c
examples/ios/CobolDemo/: README.md
examples/kmp/CobolMultiplatform/: README.md  gradle.properties  settings.gradle.kts
examples/kmp/CobolMultiplatform/androidApp/src/main/cpp/: AnswerToLifeJni.c  CMakeLists.txt
ios/: build-all.sh  build-gmp.sh  build-gnucobol.sh  build-libdb.sh  build_env.sh  package.sh
ios/GnuCOBOL/Sources/: GnuCOBOL.swift
ios/package/: Package.swift.template
ios/package/Headers/: GnuCOBOLCore.h  module.modulemap
ios/patches/gnucobol/: ios_compat.h
kmp/: LICENSE  README.md  build.gradle.kts  librarian.root.properties  package.sh  settings.gradle.kts
kmp/gradle/: libs.versions.toml
(+204 files in other folders)
